[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tasnif"
version = "0.2.0"
description = "Unsupervised image clustering with modern deep embeddings (timm, CLIP), PCA and K-Means."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Mert Cobanov", email = "mertcobanov@gmail.com" }]
keywords = [
    "image-clustering",
    "unsupervised-learning",
    "embeddings",
    "kmeans",
    "computer-vision",
    "timm",
    "clip",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
    "scikit-learn>=1.3",
    "torch>=2.1",
    "torchvision>=0.16",
    "timm>=1.0",
    "tqdm>=4.65",
    "rich>=13.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
cli = ["typer>=0.12"]
clip = ["open-clip-torch>=2.24"]
umap = ["umap-learn>=0.5"]
all = [
    "tasnif[cli]",
    "tasnif[clip]",
    "tasnif[umap]",
]
dev = [
    "tasnif[cli,clip]",
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "types-tqdm",
]

[project.urls]
Homepage = "https://github.com/cobanov/tasnif"
Repository = "https://github.com/cobanov/tasnif"
Issues = "https://github.com/cobanov/tasnif/issues"
Changelog = "https://github.com/cobanov/tasnif/blob/main/CHANGELOG.md"

[project.scripts]
tasnif = "tasnif.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tasnif"]

[tool.hatch.build.targets.sdist]
include = [
    "src/tasnif",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # flake8-bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "N",             # pep8-naming
    "C4",            # comprehensions
    "PIE",
    "PTH",           # use pathlib
    "TID",
    "ARG",
]
ignore = [
    "E501",   # handled by formatter
    "B008",   # function calls in defaults (typer needs it)
    "TID252", # relative imports within a package are fine
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "N802"]
"examples/*" = ["ARG"]
"src/tasnif/cli.py" = ["ARG001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true
files = ["src/tasnif"]

[[tool.mypy.overrides]]
module = [
    "timm",
    "timm.*",
    "open_clip",
    "open_clip.*",
    "umap",
    "umap.*",
    "matplotlib",
    "matplotlib.*",
    "scipy",
    "scipy.*",
    "sklearn",
    "sklearn.*",
    "torchvision",
    "torchvision.*",
]
ignore_missing_imports = true
follow_imports = "skip"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring a GPU",
    "integration: marks integration tests that download models",
]

[tool.coverage.run]
source = ["src/tasnif"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
